--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
                                 <a href="/uslugi.html">Услуги</a>
                                 <ul>
                                     <li>
-                                        <div>Создание сайта</div>
+                                        <a href="#">Создание сайта</a>
                                         <ul>
                                             <li><a href="/usluga.html">индивидуальный проект</a></li>
                                             <li><a href="/usluga.html">сайт-визитка</a></li>
@@ -57,7 +57,7 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <div>Техническая поддержка</div>
+                                        <a href="#">Техническая поддержка</a>
                                         <ul>
                                             <li><a href="#">домен-хотинг</a></li>
                                             <li><a href="#">seo-аудит</a></li>
@@ -66,7 +66,7 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <div>Сопровождение сайта</div>
+                                        <a href="#">Сопровождение сайта</a>
                                         <ul>
                                             <li><a href="#">seo-продвижение</a></li>
                                             <li><a href="#">контекстная реклама</a></li>
@@ -81,12 +81,14 @@
                             <li class="active"><a href="/contacts.html">Контакты</a></li>
                         </ul>
                     </nav>
+                    <a href="tel:89787547499" class="phone__svg">
+                        <svg class="phone">
+                            <use xlink:href="./img/symbols.svg#phone"></use>
+                        </svg>
+                    </a>
                     <div class="phone__email">
                         <a href="tel:89787547499" title="Позвонить" class="phone__link">
                             <span>8 (978) 754-74-99</span>
-                            <svg class="phone">
-                                <use xlink:href="./img/symbols.svg#phone"></use>
-                            </svg>
                         </a>
                         <a href="mailto:info@krasber.ru" title="Написать на почту">info@krasber.ru</a>
                     </div>
@@ -225,8 +227,8 @@
                                     <div class="single__block">
                                         <input type="email" name="email" placeholder="Email" autocomplete="off">
                                     </div>
-                                    <div class="single__block submit__block">
-                                        <input type="submit" value="Отправить">
+                                    <div class="single__block submit__block is__sent">
+                                        <button type="submit">Отправить</button>
                                     </div>
                                     <div class="single__block agree__block">
                                         <input type="checkbox" name="agree" id="i_agree" value="1" checked>
@@ -545,7 +547,7 @@
                             <label for="i_agree2">Отправляя заяявку  вы соглашаетесь с <a href="#" title="Перейти на страницу описания">правилами офферты</a></label>
                         </div>
                         <div class="single__block submit__block">
-                            <input type="submit" value="Отправить">
+                            <button type="submit">Отправить</button>
                         </div>
                     </form>
                 </div>
@@ -615,7 +617,7 @@
                                 2017 - 2018 © Создание и раскрутка сайтов. ООО «Красбер», ИНН 9106013479
                             </div>
                         </div>
-                        <div class="col-2 col__service">
+                        <div class="col__service">
                             <div class="title">Создание<br/> сайта</div>
                             <ul>
                                 <li><a href="#">индивидуальный проект</a></li>
@@ -627,7 +629,7 @@
                                 <li><a href="#">ip</a></li>
                             </ul>
                         </div>
-                        <div class="col-2 col__service">
+                        <div class="col__service">
                             <div class="title">Техническая поддержка</div>
                             <ul>
                                 <li><a href="#">домен-хотинг</a></li>
@@ -636,7 +638,7 @@
                                 <li><a href="#">разовая оптимизация</a></li>
                             </ul>
                         </div>
-                        <div class="col-2 col__service">
+                        <div class="col__service">
                             <div class="title">Сопровождение сайта</div>
                             <ul>
                                 <li><a href="#">seo-продвижение</a></li>
@@ -645,7 +647,7 @@
                                 <li><a href="#">дизайн-сопровождение</a></li>
                             </ul>
                         </div>
-                        <div class="col-2 col__nav">
+                        <div class="col__nav">
                             <nav>
                                 <ul>
                                     <li><a href="#">Главная</a></li>
