--- a/src/usluga.html
+++ b/src/usluga.html
@@ -27,9 +27,12 @@
     </div>
 
     <header>
-        <div class="sticky__menu-always">
+        <div class="sticky__menu sticky__menu-always">
             <div class="container">
                 <div class="top__line">
+                    <svg class="icon menu">
+                        <use xlink:href="../img/symbols.svg#menu"></use>
+                    </svg>
                     <div class="logo">
                         <a href="/">
                             <img src="./img/logo_green.svg" alt="logo">
@@ -39,10 +42,10 @@
                     <nav>
                         <ul>
                             <li class="has__child">
-                                <a href="/uslugi.html">Услуги</a>
+                                <a href="/#">Услуги</a>
                                 <ul>
                                     <li>
-                                        <div>Создание сайта</div>
+                                        <a href="#">Создание сайта</a>
                                         <ul>
                                             <li><a href="/usluga.html">индивидуальный проект</a></li>
                                             <li><a href="/usluga.html">сайт-визитка</a></li>
@@ -54,7 +57,7 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <div>Техническая поддержка</div>
+                                        <a href="#">Техническая поддержка</a>
                                         <ul>
                                             <li><a href="#">домен-хотинг</a></li>
                                             <li><a href="#">seo-аудит</a></li>
@@ -63,7 +66,7 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <div>Сопровождение сайта</div>
+                                        <a href="#">Сопровождение сайта</a>
                                         <ul>
                                             <li><a href="#">seo-продвижение</a></li>
                                             <li><a href="#">контекстная реклама</a></li>
@@ -78,8 +81,15 @@
                             <li class="active"><a href="/contacts.html">Контакты</a></li>
                         </ul>
                     </nav>
+                    <a href="tel:89787547499" class="phone__svg">
+                        <svg class="phone">
+                            <use xlink:href="./img/symbols.svg#phone"></use>
+                        </svg>
+                    </a>
                     <div class="phone__email">
-                        <a href="tel:89787547499" title="Позвонить">8 (978) 754-74-99</a>
+                        <a href="tel:89787547499" title="Позвонить" class="phone__link">
+                            <span>8 (978) 754-74-99</span>
+                        </a>
                         <a href="mailto:info@krasber.ru" title="Написать на почту">info@krasber.ru</a>
                     </div>
                     <!-- /.phone__email -->
@@ -318,7 +328,7 @@
                             <label for="i_agree2">Отправляя заяявку  вы соглашаетесь с <a href="#" title="Перейти на страницу описания">правилами офферты</a></label>
                         </div>
                         <div class="single__block submit__block">
-                            <input type="submit" value="Отправить">
+                            <button type="submit">Отправить</button>
                         </div>
                     </form>
                 </div>
@@ -448,7 +458,7 @@
                                         <input type="email" name="email" placeholder="Email" autocomplete="off">
                                     </div>
                                     <div class="single__block">
-                                        <input type="submit" value="Отправить">
+                                        <button type="submit">Отправить</button>
                                     </div>
                                     <div class="single__block agree__block">
                                         <input type="checkbox" name="agree" id="i_agree" value="1" checked>
@@ -526,7 +536,7 @@
                                 2017 - 2018 © Создание и раскрутка сайтов. ООО «Красбер», ИНН 9106013479
                             </div>
                         </div>
-                        <div class="col-2 col__service">
+                        <div class="col__service">
                             <div class="title">Создание<br/> сайта</div>
                             <ul>
                                 <li><a href="#">индивидуальный проект</a></li>
@@ -538,7 +548,7 @@
                                 <li><a href="#">ip</a></li>
                             </ul>
                         </div>
-                        <div class="col-2 col__service">
+                        <div class="col__service">
                             <div class="title">Техническая поддержка</div>
                             <ul>
                                 <li><a href="#">домен-хотинг</a></li>
@@ -547,7 +557,7 @@
                                 <li><a href="#">разовая оптимизация</a></li>
                             </ul>
                         </div>
-                        <div class="col-2 col__service">
+                        <div class="col__service">
                             <div class="title">Сопровождение сайта</div>
                             <ul>
                                 <li><a href="#">seo-продвижение</a></li>
@@ -556,7 +566,7 @@
                                 <li><a href="#">дизайн-сопровождение</a></li>
                             </ul>
                         </div>
-                        <div class="col-2 col__nav">
+                        <div class="col__nav">
                             <nav>
                                 <ul>
                                     <li><a href="#">Главная</a></li>
@@ -578,7 +588,7 @@
             <div class="row">
                 <div class="col-10">
                     <div class="order__service-form">
-                        <div class="close__box">
+                        <div class="close__box" title="Закрыть форму">
                             <svg class="icon close">
                                 <use xlink:href="./img/symbols.svg#close"></use>
                             </svg>
@@ -608,7 +618,7 @@
                                         <input type="email" name="email" placeholder="Email" autocomplete="off">
                                     </div>
                                     <div class="single__block">
-                                        <input type="submit" value="Отправить">
+                                        <button type="submit">Отправить</button>
                                     </div>
                                     <div class="single__block agree__block">
                                         <input type="checkbox" name="agree" id="i_agree" value="1" checked>
