--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
                                 <a href="/uslugi.html">Услуги</a>
                                 <ul>
                                     <li>
-                                        <a href="#">Создание сайта</a>
+                                        <a href="/uslugi.html">Создание сайта</a>
                                         <ul>
                                             <li><a href="/usluga.html">индивидуальный проект</a></li>
                                             <li><a href="/usluga.html">сайт-визитка</a></li>
@@ -57,7 +57,7 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="#">Техническая поддержка</a>
+                                        <a href="/uslugi.html">Техническая поддержка</a>
                                         <ul>
                                             <li><a href="#">домен-хотинг</a></li>
                                             <li><a href="#">seo-аудит</a></li>
@@ -66,7 +66,7 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="#">Сопровождение сайта</a>
+                                        <a href="/uslugi.html">Сопровождение сайта</a>
                                         <ul>
                                             <li><a href="#">seo-продвижение</a></li>
                                             <li><a href="#">контекстная реклама</a></li>
@@ -611,7 +611,7 @@
                 <div class="col-10">
                     <div class="line"></div>
                     <div class="row list__columns">
-                        <div class="col-4 col__logo">
+                        <div class="col__logo">
                             <img src="./img/logo_green.svg" class="logo__green" alt="logo">
                             <div class="copyright">
                                 2017 - 2018 © Создание и раскрутка сайтов. ООО «Красбер», ИНН 9106013479
