--- a/src/portfolio-item.html
+++ b/src/portfolio-item.html
@@ -164,17 +164,17 @@
         </div>
     </section>
 
-    <section>
+    <section class="portfolio__nav">
         <div class="container">
             <div class="row">
                 <div class="col-10">
                     <div class="row">
-                        <div class="col-6 center">
+                        <div class="col-only-6 center">
                             <a class="prev__project">
                                 Предыдущий проект
                             </a>
                         </div>
-                        <div class="col-6 center">
+                        <div class="col-only-6 center">
                             <a class="next__project">
                                 Следующий проект
                             </a>
@@ -274,7 +274,7 @@
                 <div class="col-10">
                     <div class="line"></div>
                     <div class="row list__columns">
-                        <div class="col-4 col__logo">
+                        <div class="col__logo">
                             <img src="./img/logo_green.svg" class="logo__green" alt="logo">
                             <div class="copyright">
                                 2017 - 2018 © Создание и раскрутка сайтов. ООО «Красбер», ИНН 9106013479
