--- a/src/uslugi.html
+++ b/src/uslugi.html
@@ -479,7 +479,7 @@
                 <div class="col-10">
                     <div class="line"></div>
                     <div class="row list__columns">
-                        <div class="col-4 col__logo">
+                        <div class="col__logo">
                             <img src="./img/logo_green.svg" class="logo__green" alt="logo">
                             <div class="copyright">
                                 2017 - 2018 © Создание и раскрутка сайтов. ООО «Красбер», ИНН 9106013479
