--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -417,7 +417,7 @@
                             <label for="i_agree2">Отправляя заяявку  вы соглашаетесь с <a href="#" title="Перейти на страницу описания">правилами офферты</a></label>
                         </div>
                         <div class="single__block submit__block">
-                            <input type="submit" value="Отправить">
+                            <button type="submit">Отправить</button>
                         </div>
                     </form>
                 </div>
@@ -481,7 +481,7 @@
                 <div class="col-10">
                     <div class="line"></div>
                     <div class="row list__columns">
-                        <div class="col-4 col__logo">
+                        <div class="col__logo">
                             <img src="./img/logo_green.svg" class="logo__green" alt="logo">
                             <div class="copyright">
                                 2017 - 2018 © Создание и раскрутка сайтов. ООО «Красбер», ИНН 9106013479
