--- a/src/usluga.html
+++ b/src/usluga.html
@@ -35,7 +35,7 @@
                     </svg>
                     <div class="logo">
                         <a href="/">
-                            <img src="./img/logo_green.svg" alt="logo">
+                            <img src="./img/logo_green.svg" data-green-logo="" alt="logo">
                         </a>
                     </div>
                     <!-- /.logo -->
@@ -110,7 +110,7 @@
                         <li><a href="#">Создание сайта</a></li>
                         <li>Интернет магазин</li>
                     </ul>
-                    <h1>Интернет магазин</h1>
+                    <h1>Индивидуальный проект</h1>
                 </div>
             </div>
         </div>
@@ -125,11 +125,66 @@
                     <p>Поскольку главная задача сайта – это заинтересовать посетителя и перевести в список потенциальных клиентов, то созданием интернет-ресурса должен заниматься профессионал. Множество шаблонов во всемирной паутине дают возможность рядовому пользователю создать сайт буквально в течение нескольких минут. Но без грамотного оформления и оптимизации данных такой ресурс останется «пустышкой» и не принесет прибыли. Основными функциями сайта можно считать: имидж; коммуникация; реклама; информативность; маркетинг. Потенциальный покупатель должен понять, чем занимается компания, поэтому следует предоставить максимальное количество информации на сайте.</p>
                     <h2>Почему стоит заказать создание сайта в студии "Красбер"?</h2>
                     <p>С помощью рекламы можно рассказать о сервисах, услугах, товарах, а форма обратной связи служит для общения с заказчиками. Чтобы оперативно информировать пользователей о новых товарах и услугах, следует позаботиться о привлекательном дизайне. С помощью акций и опросов можно осуществлять продажи в режиме онлайн. Анализируя вопросы, которые задают покупатели, можно понять, на какую группу товаров есть спрос или какой информации не хватает на сайте. Благодаря размещению тематических статей, сертификатов, отзывов, вы получите полноценный сайт для развития бизнеса.</p>
+
+                    <table>
+                        <tbody>
+                        <tr>
+                            <td>
+                                <p>Оценка проекта</p>
+                            </td>
+                            <td>
+                                <p>Подбираем доменное имя и хостинг</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p>Разработка макетов страниц</p>
+                            </td>
+                            <td>
+                                <p>Написание и согласование ТЗ (технического задания)</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p>Выбор дизайна сайта и его выполнение</p>
+                            </td>
+                            <td>
+                                <p>Подключение административной панели и согласование ее возможностей</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p>Настройка и подключение дополнительных модулей</p>
+                            </td>
+                            <td>
+                                <p>Выполнение сео-требований для сайта</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p>Тестирование и проверка</p>
+                            </td>
+                            <td>
+                                <p>Сдача проекта</p>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+
                     <h3>FAQ</h3>
                     <ul class="faq">
                         <li>
                             <div class="q">Что такое seo-продвижение и как его мажут на хлебушЫк?</div>
-                            <div class="a">С помощью рекламы можно рассказать о сервисах, услугах, товарах, а форма обратной связи служит для общения с заказчиками. Чтобы оперативно информировать пользователей о новых товарах и услугах, следует позаботиться о привлекательном дизайне. С помощью акций и опросов можно осуществлять продажи в режиме онлайн. Анализируя вопросы, которые задают покупатели, можно понять, на какую группу товаров есть спрос или какой информации не хватает на сайте. Благодаря размещению тематических статей, сертификатов, отзывов, вы получите полноценный сайт для развития бизнеса.</div>
+                            <div class="a">
+                                <p>С помощью рекламы можно рассказать о сервисах, услугах, товарах, а форма обратной связи служит для общения с заказчиками.</p>
+                                <ul>
+                                    <li>С помощью рекламы можно</li>
+                                    <li>Пунтк 2</li>
+                                    <li>Пункт 3</li>
+                                    <li>Пунтк 4</li>
+                                    <li>Пунтк 5</li>
+                                </ul>
+                            </div>
                         </li>
                         <li>
                             <div class="q">Как не попасть под фильтры, а?</div>
@@ -152,8 +207,6 @@
                         <div class="tariff type-one col-4">
                             <div class="box">
                                 <div class="name">Базовый</div>
-                                <div class="line"></div>
-                                <div class="price">от 5 000 р.</div>
                                 <svg class="icon arrow_down">
                                     <use xlink:href="./img/symbols.svg#arrow_down"></use>
                                 </svg>
@@ -168,14 +221,18 @@
                                     <li>возможность установки дополнительных сервисов</li>
                                     <li>онлайн расчет стоимости</li>
                                 </ul>
+                                <div class="price">
+                                    <p>Стоимость настройки – 4000</p>
+                                    <p>Ведение - 3000p</p>
+                                    <p>При бюджете от 15 000 – 20% от суммы за ведение контекста<p>
+                                    <p>Рекламный бюджет – от 5000 в месяц на одну кампанию<p>
+                                </div>
                                 <a href="#" class="btn green call__popup">Заказать</a>
                             </div>
                         </div>
-                        <div class="tariff type-two col-4">
+                        <div class="tariff type-two col-4 is__open">
                             <div class="box">
                                 <div class="name">Стандарт</div>
-                                <div class="line"></div>
-                                <div class="price">от 5 000 р.</div>
                                 <svg class="icon arrow_down">
                                     <use xlink:href="./img/symbols.svg#arrow_down"></use>
                                 </svg>
@@ -185,25 +242,25 @@
                                     <li>Готовый шаблонный дизайн </li>
                                     <li>авторская CMS с простым управлением </li>
                                     <li>адаптивный дизайн</li>
-                                    <li>счетчик посещений</li>
-                                    <li>форма заказа обратной связи</li>
-                                    <li>возможность установки дополнительных сервисов</li>
-                                    <li>онлайн расчет стоимости</li>
                                 </ul>
+                                <div class="price">
+                                    <p>Стоимость настройки – 4000</p>
+                                    <p>Ведение - 3000p</p>
+                                    <p>При бюджете от 15 000 – 20% от суммы за ведение контекста<p>
+                                    <p>Рекламный бюджет – от 5000 в месяц на одну кампанию<p>
+                                </div>
                                 <a href="#" class="btn green call__popup">Заказать</a>
                             </div>
                         </div>
                         <div class="tariff type-three col-4">
                             <div class="box">
                                 <div class="name">Премиум</div>
-                                <div class="line"></div>
-                                <div class="price">от 5 000 р.</div>
                                 <svg class="icon arrow_down">
                                     <use xlink:href="./img/symbols.svg#arrow_down"></use>
                                 </svg>
                             </div>
                             <div class="body">
-                                <ul>
+                                <ul class="icon__plus">
                                     <li>Готовый шаблонный дизайн </li>
                                     <li>авторская CMS с простым управлением </li>
                                     <li>адаптивный дизайн</li>
@@ -211,8 +268,11 @@
                                     <li>форма заказа обратной связи</li>
                                     <li>возможность установки дополнительных сервисов</li>
                                     <li>онлайн расчет стоимости</li>
+                                    <li>онлайн расчет стоимости</li>
+                                    <li>онлайн расчет стоимости</li>
+                                    <li>онлайн расчет стоимости</li>
                                 </ul>
-                                <a href="#" class="btn green call__popup">Заказать</a>
+                                <a href="#" class="btn green call__popup" data-service="Премиум">Заказать</a>
                             </div>
                         </div>
                     </div>
@@ -348,6 +408,11 @@
                             </svg>
                             <div class="title">Разработка сайтов</div>
                             <p>Сайт - визитная карточка Вашего бизнеса на просторах интернета. Сайт - визитная карточка Вашего бизнеса на просторах интернета.</p>
+                            <ul>
+                                <li>Наполнение сайта</li>
+                                <li>Верстка проекта</li>
+                                <li>Формы захвата</li>
+                            </ul>
                             <div class="price">от 12 000 р.</div>
                             <a href="#" class="btn_style-two">Подробнее</a>
                         </div>
@@ -436,7 +501,7 @@
                                         <select name="service" id="service__field">
                                             <option selected disabled>Не выбрано</option>
                                             <optgroup label="Создание сайта">
-                                                <option>Индивидуальный проект</option>
+                                                <option value="Индивидуальный проект">Индивидуальный проект</option>
                                                 <option>Сайт-визитка</option>
                                                 <option>Сайт-каталог</option>
                                             </optgroup>
@@ -604,7 +669,7 @@
                                         <select name="service" id="service__field">
                                             <option>Базовый</option>
                                             <option>Стандарт</option>
-                                            <option>Премиум</option>
+                                            <option value="Премиум">Премиум</option>
                                         </select>
                                         <i class="select__arrow"></i>
                                     </div>
