--- a/src/uslugi.html
+++ b/src/uslugi.html
@@ -299,13 +299,22 @@
                             <div class="row">
                                 <div class="col-4">
                                     <div class="image">
-                                        <img src="./img/site_type-01.png" alt="">
+                                        <svg class="icon">
+                                            <use xlink:href="./img/symbols.svg#usable_audit"></use>
+                                        </svg>
                                     </div>
                                 </div>
                                 <div class="col-8">
                                     <div class="body">
                                         <a class="title">Сайт-визитка</a>
-                                        <p>Сайт - визитная карточка Вашего бизнеса на просторах интернета.  Сайт - визитная карточка Вашего бизнеса на просторах интернета.</p>
+                                        <p>Сайт для презентации большого количества товаров или услуг с возможностью заказать.</p>
+
+                                        <ul>
+                                            <li>Управление через CMS</li>
+                                            <li>Уникальный/шаблонный дизайн</li>
+                                            <li>Формы обратной связи</li>
+                                        </ul>
+
                                         <div class="price">от 5000 р.</div>
                                         <a href="#" class="btn green">ПОДРОБНЕЕ</a>
                                     </div>
@@ -316,7 +325,9 @@
                             <div class="row">
                                 <div class="col-4">
                                     <div class="image">
-                                        <img src="./img/site_type-02.png" alt="">
+                                        <svg class="icon">
+                                            <use xlink:href="./img/symbols.svg#domain_hosting"></use>
+                                        </svg>
                                     </div>
                                 </div>
                                 <div class="col-8">
@@ -333,7 +344,9 @@
                             <div class="row">
                                 <div class="col-4">
                                     <div class="image">
-                                        <img src="./img/site_type-03.png" alt="">
+                                        <svg class="icon">
+                                            <use xlink:href="./img/symbols.svg#yandex_direct"></use>
+                                        </svg>
                                     </div>
                                 </div>
                                 <div class="col-8">
@@ -350,7 +363,9 @@
                             <div class="row">
                                 <div class="col-4">
                                     <div class="image">
-                                        <img src="./img/site_type-04.png" alt="">
+                                        <svg class="icon">
+                                            <use xlink:href="./img/symbols.svg#landing_page"></use>
+                                        </svg>
                                     </div>
                                 </div>
                                 <div class="col-8">
