--- a/src/portfolio-item.html
+++ b/src/portfolio-item.html
@@ -116,7 +116,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="tags">
         <div class="container">
             <div class="row">
                 <div class="col-10">
